菜单中的箭头已经可以识别右键 参考 https://swisnl.github.io/jQuery-contextMenu/demo.html   https://blog.csdn.net/lanyang123456/article/details/55006595

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="public/css/flatly.bootstrap.min.css">
     <link rel="stylesheet" href="public/css/font-awesome.min.css">
     <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="public/css/jquery.contextMenu.css">
     <script>window.$ = window.jQuery = require('./public/js/jquery-1.11.3.min.js');</script>
     <script src="public/js/markdown-it.min.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
@@ -13,6 +14,7 @@
     <script src="public/js/angular-route.min.js"></script>
     <script src="public/js/paste.js"></script>
     <script src="public/js/appMain.js"></script>
+    <script src="public/js/jquery.contextMenu.js"></script>
 </head>
 <body>
     <div class="container-fluid">
