调整菜单宽度

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
                     </span>
                 </div><br/>
                 <ul class="list-group list-group-sm sidebar"></ul>
-                <div style="width:200px;border:1px solid #ccc">
+                <div>
                         <ul id="browser"  class="treeview filetree">
                         </ul>
                 </div>
