点击和右键可以识别文件夹和文件

--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,8 @@
             </div>
             <div class="nav-head col-sm-9 col-md-9 col-lg-9">
                 <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#newmenu"><i class="fa fa-plus"></i> New Menu</a></li>
-                    <li><a href="#new"><i class="fa fa-plus"></i> New post</a></li>
+                        <li><a href="#newmenu" id="newmenu"><i class="fa fa-plus"></i> New Menu</a></li>
+                    <li><a href="#new" id="newpost"><i class="fa fa-plus"></i> New post</a></li>
                     <li><a class="go_home" href="#"><i class="fa fa-home"></i> Home</a></li>
                 </ul>
             </div>
